@@ -1,6 +1,9 @@
  (Format: Year/Month/Day)
 Changes for 1.0.1:
 *07/10/14:
+   * Added support for transient windows in window patterns, e.g.
+     (transient=yes|no), defaulting to "no" for the apps file (Mark)
+     Remember.cc ClientPattern.cc/hh Focusable.hh Window.cc/hh
    * Bugfix for SendToPrevWorkspace/TakeToPrevWorkspace (Mathias)
      CurrentWindowCmd.cc/hh
 *07/10/13:
